# test-assistant

./: .gitignore  pyproject.toml
.autotest/: config.yml  test_plan.json
cli/: main.py
cli/commands/: init.py  plan.py  report.py  run.py  serve.py  status.py  watch.py
core/: utils.py
core/analyzers/: framework.py  snapshot.py  source_analyzer.py
core/executors/: base.py  pytest_executor.py  vitest_executor.py
core/graphs/: run_graph.py
core/llm/: client.py
docs/plans/: 2026-06-29-auto-test-design.md
learning/: day1.md  day5.md  day6.md
learning/day11/: day11.md  learning.py
learning/day12/: day12.md
learning/day2/: day2.md  test.py
learning/day3/: day3.md
learning/day7/: day7.md  learning.py
learning/day9/: day9.md
tests/: test_framework.py  test_snapshot.py
